<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            style="@style/Titles"
            android:text="@string/choose_estimate_type"/>

        <Button
            android:id="@+id/new_estimate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_estimate"
            style="@style/AppButton.Big"/>

        <Button
            android:id="@+id/continue_estimate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_estimate"
            style="@style/AppButton.Big"/>

        <Button
            android:id="@+id/main_menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:background="@color/salmon"
            style="@style/AppButton.Big"/>

    </LinearLayout>

</layout>